--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,12 @@
 html,
 body {
+  --avatar-size: 150px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
 
-  // align-items: center;
+  // justify-content: center;
+
+  align-items: center;
 
   width: 100dvw;
   height: 100dvh;
@@ -25,11 +28,17 @@ canvas {
   box-shadow: rgb(0 0 0 / 50%) 0 5px 10px;
 }
 
+.content {
+  margin-block-start: calc(var(--avatar-size) / 2);
+  padding: 0 20px;
+
+  color: rgb(131 130 130);
+}
+
 .user-avatar {
-  --size: 150px;
   position: absolute;
-  inset-block-start: calc(100dvh / 2 - var(--size) / 2);
-  inset-inline-start: calc(50% - var(--size) / 2);
+  inset-block-start: calc(100dvh / 2 - var(--avatar-size) / 2);
+  inset-inline-start: calc(50% - var(--avatar-size) / 2);
 
   width: 150px;
   height: 150px;
